tests/snapshots/wire_snapshots__exit.snap
---
source: tests/wire_snapshots.rs
expression: "Request::Exit { id: \"test\".into() }"
---
{
  "type": "exit",
  "id": "test"
}
