tests/snapshots/wire_snapshots__exited.snap
---
source: tests/wire_snapshots.rs
assertion_line: 222
expression: "Response::Exited { id: \"test\".into() }"
---
{
  "type": "exited",
  "id": "test"
}
