tests/snapshots/wire_snapshots__getdbjob.snap
---
source: tests/wire_snapshots.rs
expression: "Request::GetDbJob { id: \"test\".into() }"
---
{
  "type": "getdbjob",
  "id": "test"
}
