tests/snapshots/wire_snapshots__gettracedata.snap
---
source: tests/wire_snapshots.rs
expression: "Request::GetTraceData { id: \"test\".into() }"
---
{
  "type": "gettracedata",
  "id": "test"
}
