tests/snapshots/wire_snapshots__getversion.snap
---
source: tests/wire_snapshots.rs
expression: "Request::GetVersion { id: \"test\".into() }"
---
{
  "type": "getversion",
  "id": "test"
}
