tests/snapshots/wire_snapshots__ping.snap
---
source: tests/wire_snapshots.rs
expression: "Request::Ping { id: \"test\".into() }"
---
{
  "type": "ping",
  "id": "test"
}
