tests/snapshots/wire_snapshots__set_config_trace_off.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "setconfig",
  "id": "1",
  "tracelevel": "OFF",
  "tracedest": "IN_MEM"
}
