tests/snapshots/wire_snapshots__setconfig.snap
---
source: tests/wire_snapshots.rs
expression: "Request::SetConfig\n{\n    id: \"test\".into(), tracelevel: \"DATASTREAM\".into(), tracedest:\n    \"FILE\".into(),\n}"
---
{
  "type": "setconfig",
  "id": "test",
  "tracelevel": "DATASTREAM",
  "tracedest": "FILE"
}
